# olang

./: .gitignore  CMakeLists.txt  PROJECT_STRUCTURE.md  README.md  ROADMAP.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: release.yml
.namespace_fix_backup/: SymbolTable.hpp  TypeChecker.hpp  TypeEnvironment.hpp
cmake/: OLangCompilerFlags.cmake
examples/t1dm/: beta7x_proof_of_concept.olang
grammar/: OLangLexer.g4  OLangParser.g4  README.md
include/olang/ast/: Type.hpp
include/olang/frontend/: AST.h  ASTBuilder.h  ASTContext.h  ASTType.hpp  Diagnostic.h  SourceLocation.h
include/olang/middle/units/: Unit.h
include/olang/runtime/agents/: Agent.h  Capability.h
include/olang/runtime/bio/: IsletState.h
include/olang/semantic/: DimensionalChecker.cpp  DimensionalChecker.hpp  ErrorReporter.hpp  TypeChecker.hpp
include/olang/support/: llvm_fwd.h
include/olang/type/: Unit.hpp
scripts/: generate_grammar.sh  patch_antlr4_generated.cmake
src/ast/: Type.cpp
src/backend/cuda/: kmc_kernel.cu
src/frontend/: ASTBuilder.cpp  ASTType.cpp  Diagnostic.cpp
src/semantic/: DimensionalChecker.cpp  ErrorReporter.cpp  SymbolTable.cpp  TypeChecker.cpp  TypeEnvironment.cpp
tests/unit/: test_type_system.cpp
tests/unit/middle/: test_unit_dimensional_analysis.cpp
tests/unit/runtime/: test_capability_rbac.cpp
tools/olangc/: main.cpp
